# csvrecorder

./: CMakeLists.txt  README.md
CSV/: filetest.csv
Client/: client.cpp  client.h  main.cpp
Common/: logger.cpp  logger.h
Server/: main.cpp  server.cpp  server.h
